--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -17,4 +17,4 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
         COVERALLS_PARALLEL: true
-      run: coveralls --service=github
+      run: coveralls debug --service=github
